# DegradedOD

./: .gitignore  README.md  pyproject.toml  visualize.py
configs/model/: gdino_base.yaml  gdino_tiny.yaml  modd_default.yaml
configs/train/: phase_a_memory.yaml  phase_b_modules.yaml  phase_c_finetune.yaml
modd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_memory_bank.py  download_coco.sh  download_exdark.sh  download_rtts.sh  evaluate.py  merge_memory_bank.py  train_modules.py
src/: __init__.py
src/models/: __init__.py  detection_head.py  gdino_wrapper.py  memory_bank.py  memory_retrieval.py  memory_update.py  modd_detector.py  proposal_encoder.py  refinement_module.py
src/training/: losses.py  trainer.py
src/utils/: __init__.py  feature_hooks.py  metrics.py  visualization.py
tests/: test_memory_bank.py  test_refinement.py  test_retrieval.py
