[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "modd"
version = "0.1.0"
description = "Memory-Augmented Open-World Detection for Degraded Conditions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",

    # Memory & Retrieval
    "faiss-gpu>=1.7.4",

    # Data & Config
    "hydra-core>=1.3.0",
    "albumentations>=1.3.0",
    "pycocotools>=2.0.7",

    # Training
    "wandb>=0.16.0",
    "torchmetrics>=1.2.0",

    # Utilities
    "einops>=0.7.0",
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
